# gooroom-user-plugin

./: Makefile.in  NEWS  README  configure  configure.ac  configure.ac.in
debian/: changelog  control  copyright  rules
icons/: Makefile.am  Makefile.in
icons/16x16/status/: Makefile.am
icons/22x22/: Makefile.am  Makefile.in
icons/22x22/status/: Makefile.am
icons/24x24/status/: Makefile.am
icons/scalable/: Makefile.am  Makefile.in
icons/scalable/apps/: Makefile.am  Makefile.in
icons/scalable/status/: Makefile.am  Makefile.in
panel-plugin/: Makefile.am  Makefile.in  gresource.xml  user-plugin.c  user-plugin.desktop.in.in  user-plugin.h  user-window-resources.c  user-window-resources.h  user-window.ui
po/: POTFILES.in  POTFILES.skip  en_GB.po  en_US.po  ko.po
